--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Abderrahmene Bouidia (AbderrahmeneDZ)",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.2"
   }
 }
